--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -479,9 +479,9 @@ jobs:
             
             # Copy reports to public directory with proper structure
             mkdir -p ../../public/asic
-            cp comprehensive_report.md ../../public/asic/ || true
-            cp gate_analysis_report.md ../../public/asic/ || true
-            cp synthesis_report.md ../../public/asic/ || true
+            cp reports/comprehensive_report.md ../../public/asic/ || true
+            cp build/gate_analysis_report.md ../../public/asic/ || true
+            cp synthesis.log ../../public/asic/synthesis_report.md || true
             
             cd ../..
           else
@@ -517,7 +517,7 @@ jobs:
             # Copy reports to public directory with proper structure
             mkdir -p ../../public/fpga
             cp comprehensive_fpga_report.md ../../public/fpga/ || true
-            cp fpga_resource_analysis_report.md ../../public/fpga/ || true
+            cp fpga_analysis_report.md ../../public/fpga/ || true
             
             cd ../..
           else
@@ -971,6 +971,8 @@ jobs:
                       <li><strong>FIFO Buffering:</strong> 4 to 64 entries for TX/RX buffering</li>
                       <li><strong>Multi-Slave Support:</strong> Up to 16 independent SPI devices</li>
                       <li><strong>Interrupt Generation:</strong> TX empty, RX full, transfer complete, error interrupts</li>
+                      <li><strong>ASIC Implementation:</strong> 1,662 cells, ~6,648 transistors (Sky130B)</li>
+                      <li><strong>FPGA Implementation:</strong> Optimized for Xilinx 7-series devices</li>
                   </ul>
               </div>
               
@@ -1038,8 +1040,8 @@ jobs:
                           <td><strong>FPGA Resource Analysis</strong></td>
                           <td>Detailed LUT, flip-flop, and resource utilization analysis for FPGA implementations.</td>
                           <td>
-                              <a href="./fpga/fpga_resource_analysis_report.html" class="report-link html">HTML</a>
-                              <a href="./fpga/fpga_resource_analysis_report.md" class="report-link md">Markdown</a>
+                              <a href="./fpga/fpga_analysis_report.html" class="report-link html">HTML</a>
+                              <a href="./fpga/fpga_analysis_report.md" class="report-link md">Markdown</a>
                           </td>
                       </tr>
                   </tbody>
