fix: Improve Verilator test execution and result reporting
- Add debug output for OS detection and Verilator paths in workflow
- Create verilator_results.txt file to track test success/failure
- Update test harness report generator to check for verilator_results.txt
- Improve error handling and result reporting for Verilator tests
- Update .gitignore to exclude build artifacts and simulation files
- Ensure consistent OS detection logic with full-adder-ip repository

This should fix the 'No Verilator results found' issue in the test harness report
by properly tracking and reporting Verilator simulation results.

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,36 @@ secrets.json
 .vyges-ai-context.json.backup.*
 .vyges-ai-context.sha256
 
+# Verilator build artifacts
+obj_dir/
+*.a
+*.o
+*.d
+*.exe
+verilator_*_sim
+V*
+libV*.a
+libverilated.a
+verilated.*
+verilated_*.o
+verilated_*.d
+
+# Simulation artifacts
+simv*
+*.vcd
+*.fst
+*.ghw
+*.log
+work/
+transcript
+vsim.wlf
+simv.daidir
+csrc/
+ucli.key
+*.so
+
+# Build directories
+build/
+reports/
+*.out
+
