--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1305,7 +1305,10 @@ jobs:
             echo "                      <tr>" >> public/waveforms/index.html
             echo "                          <td><strong>${basename}.vcd</strong></td>" >> public/waveforms/index.html
             echo "                          <td>${filesize}</td>" >> public/waveforms/index.html
-            echo "                          <td><a href=\"${basename}.vcd\" class=\"download-link\" download>📥 Download</a></td>" >> public/waveforms/index.html
+            echo "                          <td>" >> public/waveforms/index.html
+            echo "                              <a href=\"${basename}.vcd\" class=\"download-link\" download>📥 Download</a>" >> public/waveforms/index.html
+            echo "                              <a href=\"https://app.surfer-project.org/index.html?load_url=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/waveforms/${basename}.vcd\" target=\"_blank\" class=\"download-link\" style=\"background: #6f42c1; margin-left: 8px;\">👁️ View</a>" >> public/waveforms/index.html
+            echo "                          </td>" >> public/waveforms/index.html
             echo "                      </tr>" >> public/waveforms/index.html
           done
           
@@ -1315,14 +1318,6 @@ jobs:
               </table>
               
               <div class="info-box">
-                  <h3>🔧 Recommended VCD Viewers</h3>
-                  <ul>
-                      <li><strong>GTKWave:</strong> Open-source waveform viewer (Linux/macOS/Windows)</li>
-                      <li><strong>Surfer:</strong> Web-based VCD viewer (drag & drop VCD files)</li>
-                      <li><strong>Waveform Viewer:</strong> Various commercial tools</li>
-                      <li><strong>VSCode Extensions:</strong> Surfer, GTKWave, or other VCD viewers</li>
-                  </ul>
-                  
                   <h4>Quick Start:</h4>
                   <ol>
                       <li>Download any VCD file using the buttons above</li>
@@ -1694,7 +1689,22 @@ jobs:
                       </tr>
                   </tbody>
               </table>
-              
+                <div style="margin-top: 30px; padding: 15px; background: #f1f3f4; border-radius: 8px; text-align: center; color: #5f6368; font-size: 14px;">
+                  <p style="margin: 0;"><strong>Thanks to open-source tools:</strong> 
+                      <a href="https://www.veripool.org/verilator/" target="_blank">Verilator</a>, 
+                      <a href="https://github.com/steveicarus/iverilog" target="_blank">Icarus Verilog</a>, 
+                      <a href="https://yosyshq.net/yosys/" target="_blank">Yosys</a>, 
+                      <a href="https://github.com/ghdl/ghdl" target="_blank">GHDL</a>, 
+                      <a href="https://github.com/RTimothyEdwards/netgen" target="_blank">Netgen</a>, 
+                      <a href="http://opencircuitdesign.com/magic/" target="_blank">Magic</a>, 
+                      <a href="https://www.cocotb.org/" target="_blank">Python Cocotb</a>, 
+                      <a href="https://gtkwave.sourceforge.net/" target="_blank">GTKWave</a>, 
+                      <a href="https://surfer-project.org/" target="_blank">Surfer</a>, 
+                      <a href="https://www.klayout.de/" target="_blank">KLayout</a>, 
+                      <a href="https://skywater-pdk.readthedocs.io" target="_blank">SkyWater Open PDK</a>
+                  </p>
+              </div>
+
               <div class="vyges-footer">
                   <p>Powered by <strong>Vyges</strong> - Build IP Not Boilerplate</p>
                   <p>© 2025 Vyges, Inc. All rights reserved. | <a href="https://github.com/vyges" target="_blank">GitHub</a> | <a href="https://vyges.com" target="_blank">Website</a></p>
